--- a/src/app/views/todo-list-view/todo-list-view.component.html
+++ b/src/app/views/todo-list-view/todo-list-view.component.html
@@ -1,16 +1,62 @@
-<p>
-	todo-list-view works!
-</p>
-<ul>
-	<li *ngFor="let item of todolist">
-		{{ item }}
-		<button (click)="remover(item)">Remover</button>
-	</li>
+<div class="container-fluid ">
+	<div class="container ">
+		<div class="card shadow w-100">
+			<div class="card bg-danger">
+				<h4 class="text-white p-3 pt-2 pb-2">To Do Angular App</h4>
+				<i class="bi bi-angular"></i>
+			</div>
+			<div class="shadow">
+				<div class="input-group p-4">
+					<input [(ngModel)]="itemadd"
+						type="text"
+						name="name"
+						placeholder="Digite"
+						class="form-control">
+					<button (click)="addItem(itemadd)"
+						class="btn btn-outline-success">
+						Adicionar
+					</button>
 
-	<input [(ngModel)]="itemadd"
-		type="text"
-		name="name"
-		placeholder="Digite">
-	<button (click)="addItem(itemadd)">Adicionar</button>
 
-</ul>
+
+
+					<!-- <input type="text" class="form-control" placeholder="Enter task " name="task" [(ngModel)]="itemadd">
+					<button class="btn btn-outline-success" type="button" (click)="addItem(itemadd)">+</button> -->
+				</div>
+			</div>
+
+
+
+
+			<div class="card-body  bg-white ">
+				<ul>
+					<li *ngFor="let item of todolist">
+						{{ item }}
+						<button class="btn btn-outline-primary col me-2" type="button"  >e</button>
+						<button (click)="remover(item)"
+							class="btn btn-outline-danger">
+							X
+						</button>
+					</li>
+
+
+
+
+
+
+
+
+				</ul>
+
+
+
+
+
+			</div>
+		</div>
+	</div>
+
+
+
+
+</div>
