--- a/src/app/views/todo-list-view/todo-list-view.component.html
+++ b/src/app/views/todo-list-view/todo-list-view.component.html
@@ -61,7 +61,7 @@
 
 				<!-- Modal Header -->
 				<div class="modal-header">
-					<h4 class="modal-title">Edição de elemento</h4>
+					<h4 class="modal-title">Edição do elemento</h4>
 					<button type="button"
 						class="btn-close"
 						data-bs-dismiss="modal"></button>
